--- a/countdown.css
+++ b/countdown.css
@@ -2,7 +2,7 @@
 body {
     background-color: black;
     color: white;
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Parisienne', cursive;
     font-size: 250pt;
     margin-left: 60px;
 }
