--- a/NewYearCountdown/NewYearCountdown.css
+++ b/NewYearCountdown/NewYearCountdown.css
@@ -2,7 +2,7 @@
 body {
     /* background-color: black; */
     color: black;
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Rajdhani', sans-serif;
     font-size: 30pt;
     margin-left: 60px;
 }
