--- a/NewYearCountdown/NewYearCountdown.css
+++ b/NewYearCountdown/NewYearCountdown.css
@@ -1,7 +1,7 @@
 
 body {
     color: black;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Londrina Sketch', cursive;
     font-size: 30pt;
     margin-left: 60px;
 }
